# rusty_pipe

./: Cargo.toml
examples/: boa_test.rs  example_channel.rs  example_playlist.rs  example_stream.rs  example_trending.rs  examples_search.rs  quickjs_test.rs
src/: downloader_trait.rs  lib.rs
src/utils/: utils.rs
src/youtube_extractor/: channel_extractor.rs  channel_info_item_extractor.rs  error.rs  itag_item.rs  mod.rs  playlist_extractor.rs  playlist_info_item_extractor.rs  search_extractor.rs  stream_extractor.rs  stream_info_item_extractor.rs  trending_extractor.rs
