[package]
name = "rusty_pipe"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
regex = "1.3.3"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
