[package]
name = "rusty_pipe"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
regex = "1.3.3"
serde_json = "1.0.45"
Boa = "0.7.0"
onig = "4.3"
pcre2 = "0.2.3"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
quick-js = "0.3.0"
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.4"

[dev-dependencies]
reqwest = { version = "0.10.4", features = [ "json"] }
urlencoding = "1.0.0"
tokio = { version = "0.2", features = ["macros"] }